--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <section>
     <div class="header">
   <p>
-    <a href="About.html" style="color:purple;">About</a>  <a href="Skills.html">Skills</a>  <a href="Education.html">Education</a> 
-    <a href="Experience.html">Experience</a>  <a href="Interests.html">Interest</a> 
+    <a href="about.html" style="color:purple;">About</a>  <a href="skills.html">Skills</a>  <a href="education.html">Education</a> 
+    <a href="experience.html">Experience</a>  <a href="interests.html">Interest</a> 
   </p>
     </div>
   </section>
