--- a/experinece.html
+++ b/experinece.html
@@ -2,8 +2,8 @@
   <section>
     <div class="header">
   <p>
-    <a href="about.html">About</a>  <a href="skills.html">Skills</a>  <a href="education.html">Education</a> 
-    <a href="experience.html"style="color:purple;">Experience</a>  <a href="interests.html">Interest</a> 
+    <a href="About.html">About</a>  <a href="Skills.html">Skills</a>  <a href="Education.html">Education</a> 
+    <a href="Experience.html" style="color:purple;">Experience</a>  <a href="Interests.html">Interest</a> 
   </p>
     </div>
   </section>
@@ -15,7 +15,7 @@
       height="250"
       alt="ALTERNATE_TEXT"
       style="margin-right: 20px;"
-         /><figcaption><h3>Afif Ahmed</h3><p>Student, Software Engineer</p><a href="https://www.linkedin.com/in/afif-ahmed-chaudhury-9aa53222a/">afifahmed@LinkedIn.com</a></h3><figcaption>
+         /><figcaption><h3>Afif Ahmed</h3><p>Student, Software Engineer</p><a href="https://www.linkedin.com/in/afif-ahmed-chaudhury-9aa53222a/"style="color:purple;">afifahmed@LinkedIn.com</a></h3><figcaption>
       </figure>
     <div>
 
@@ -26,4 +26,4 @@
     <h3 style="display: inline;">Web Developer</h3>
 <p style="display: inline;">2016-2018</p>
     <p>Amazon Vancouver, BC</p>
-<p>Download my full resume<a href= here.html>here</a> </p>
+<p>Download my full resume<a href= Resume.html>here</a> </p>
