--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <section>
     <div class="header">
   <p>
-    <a href="about.html" style="color:purple;">About</a>  <a href="skills.html">Skills</a>  <a href="education.html">Education</a> 
+    <a href="index.html" style="color:purple;">About</a>  <a href="skills.html">Skills</a>  <a href="education.html">Education</a> 
     <a href="experience.html">Experience</a>  <a href="interests.html">Interest</a> 
   </p>
     </div>
