--- a/interests.html
+++ b/interests.html
@@ -2,7 +2,7 @@
   <section>
     <div class="header">
   <p>
-    <a href="about.html">About</a>  <a href="skills.html">Skills</a>  <a href="education.html">Education</a> 
+    <a href="index.html">About</a>  <a href="skills.html">Skills</a>  <a href="education.html">Education</a> 
     <a href="experience.html">Experience</a>  <a href="interests.html"style="color:purple;">Interest</a> 
   </p>
     </div>
