--- a/experinece.html
+++ b/experinece.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Page Title</title>
+    <link rel="stylesheet" href="style.css" />
+
+  </head>
 <body>
   <section>
     <div class="header">
@@ -26,4 +35,4 @@
     <h3 style="display: inline;">Web Developer</h3>
 <p style="display: inline;">2016-2018</p>
     <p>Amazon Vancouver, BC</p>
-<p>Download my full resume<a href= Resume.html>here</a> </p>
+<p>Download my full resume<a href= Resume.pdf>here</a> </p>
