--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Page Title</title>
+    <link rel="stylesheet" href="style.css" />
+
+  </head>
 <body>
   <section>
     <div class="header">
@@ -15,7 +24,7 @@
       height="250"
       alt="ALTERNATE_TEXT"
       style="margin-right: 20px;"
-         /><figcaption><h3>Afif Ahmed</h3><p>Student, Software Engineer</p><a href="https://www.linkedin.com/in/afif-ahmed-chaudhury-9aa53222a/">afifahmed@LinkedIn.com</a></h3><figcaption>
+         /><figcaption><h3>Afif Ahmed</h3><p>Student, Software Engineer</p><a href="https://www.linkedin.com/in/afif-ahmed-chaudhury-9aa53222a/"style="color:purple;">afifahmed@LinkedIn.com</a></h3><figcaption>
       </figure>
     <div>
       <div class="line" >
@@ -50,3 +59,4 @@
   </div>
      
 </body>
+</html>
