--- a/education.html
+++ b/education.html
@@ -11,7 +11,7 @@
   <section>
     <div class="header">
   <p>
-    <a href="index.html">About</a>  <a href="skills.html">Skills</a>  <a href="education.html">Education</a> 
+    <a href="index.html">About</a>  <a href="skills.html">Skills</a>  <a href="education.html"style="color:purple;">Education</a> 
     <a href="experience.html">Experience</a>  <a href="interests.html">Interest</a> 
   </p>
     </div>
