--- a/skills.html
+++ b/skills.html
@@ -12,7 +12,7 @@
     <div class="header">
   <p>
     <a href="index.html">About</a>  <a href="skills.html"style="color:purple;">Skills</a>  <a href="education.html">Education</a> 
-    <a href="experience.html">Experience</a>  <a href="interests.html">Interest</a> 
+    <a href="experinece.html">Experience</a>  <a href="interests.html">Interest</a> 
   </p>
     </div>
   </section>
