--- a/education.html
+++ b/education.html
@@ -29,10 +29,10 @@
     <div>
 
       <h2 class="left">Education</h2>
-    <h3 style="display: inline;">PhD in Computer Engineering</h3>
-<p style="display: inline;">2014-2018</p>
-    <p>University of Calgary Calgary, Canada</p>
-    <h3 style="display: inline;">MsC in Computer Engineering</h3>
-<p style="display: inline;">2012-2014</p>
-    <p>University of Calgary Calgary, Canada</p>
+    <h3 style="display: inline;">High School</h3>
+<p style="display: inline;">2003-2020</p>
+    <p>South Breeze School, Dhaka, Bangladesh</p>
+    <h3 style="display: inline;">Bsc in Software Engineering</h3>
+<p style="display: inline;">2021-2025</p>
+    <p>University of Calgary, Calgary, Canada</p>
     <i><span style="background-color: #FFFF00">Credentials are available upon request</i>.</span>
