--- a/experinece.html
+++ b/experinece.html
@@ -28,7 +28,7 @@
       </figure>
     <div>
 
-      <h2 class="left">Experience</h2>
+      <h2 class="left"text-align:"left">Experience</h2>
     <h3 style="display: inline;"text-align:"left"> Private Tutor</h3>
 <p style="display: inline;"text-align:"left">2018-2020</p>
     <p text-align:"left">Self-employed, Dhaka, Bangladesh</p>
