--- a/experinece.html
+++ b/experinece.html
@@ -28,11 +28,11 @@
       </figure>
     <div>
 
-      <h2 class="left"text-align:"left">Experience</h2>
-    <h3 style="display: inline;"text-align:"left"> Private Tutor</h3>
-<p style="display: inline;"text-align:"left">2018-2020</p>
-    <p text-align:"left">Self-employed, Dhaka, Bangladesh</p>
-    <h3 style="display: inline;"text-align:"left">Cashier</h3>
-<p style="display: inline;"text-align:"left">2022-2023</p>
-    <p text-align:"left">A&W, Dhaka, Bangladesh</p>
+      <h2 class="left">Experience</h2>
+    <h3 style="display: inline;"> Private Tutor</h3>
+<p style="display: inline;">2018-2020</p>
+    <p>Self-employed, Dhaka, Bangladesh</p>
+    <h3 style="display: inline;">Cashier</h3>
+<p style="display: inline;">2022-2023</p>
+    <p>A&W, Dhaka, Bangladesh</p>
 <p>Download my full resume<a href= Resume.pdf>here</a> </p>
