--- a/experinece.html
+++ b/experinece.html
@@ -29,10 +29,10 @@
     <div>
 
       <h2 class="left">Experience</h2>
-    <h3 style="display: inline;"> Private Tutor</h3>
-<p style="display: inline;">2018-2020</p>
-    <p>Self-employed, Dhaka, Bangladesh</p>
-    <h3 style="display: inline;">Cashier</h3>
-<p style="display: inline;">2022-2023</p>
-    <p>A&W, Dhaka, Bangladesh</p>
+    <h3 class="left" style="display: inline;"> Private Tutor</h3>
+<p class="left" style="display: inline;">2018-2020</p>
+    <p class="left">Self-employed, Dhaka, Bangladesh</p>
+    <h3 style="display: inline;" class="left">Cashier</h3>
+<p class="left" style="display: inline;">2022-2023</p>
+    <p class="left">A&W, Dhaka, Bangladesh</p>
 <p>Download my full resume<a href= Resume.pdf>here</a> </p>
